Scope reverse DNS check to known bots via User-Agent pre-filter
  Previously, a reverse DNS lookup was performed for every request that
  reached the allowlist check. Now the lookup is only triggered if the
  User-Agent identifies the request as a known bot (e.g. Googlebot,
  bingbot, Baiduspider, Applebot).

  - Rename MCR.WAF.AllowedReverseDNS → MCR.WAF.KnownBotReverseDNS
  - Add MCR.WAF.KnownBotUserAgents with UA patterns for all Google
    crawler categories (common, special-case, user-triggered), Bing,
    Baidu and Apple
  - Rename isReverseDNSAllowed() → isKnownBotAllowedByReverseDNS()

--- a/src/main/resources/config/mcr-waf-plugin/mycore.properties
+++ b/src/main/resources/config/mcr-waf-plugin/mycore.properties
@@ -31,11 +31,70 @@ MCR.WAF.AllowedPaths=%MCR.WAF.AllowedPaths%,\
 /servlets/MCRDFGServlet/*,\
 /servlets/MCRDFGThumbnail/*
 
-# Reverse DNS Allow List (comma-separated patterns with wildcards)
-# Patterns for Google Crawlers (verified by reverse + forward DNS):
+##############################################################################
+# Known Bot Verification via Reverse DNS
+#
+# The following two properties work together: a reverse DNS check is ONLY
+# performed if the request's User-Agent first matches one of the known bot
+# User-Agent patterns (MCR.WAF.KnownBotUserAgents). If the User-Agent matches,
+# the resolved hostname is verified against the DNS patterns
+# (MCR.WAF.KnownBotReverseDNS) to confirm the bot's identity.
+##############################################################################
+
+# Known bot User-Agent patterns (comma-separated, case-insensitive substring match)
+# Only requests whose User-Agent contains one of these strings trigger a reverse DNS check.
+
+# https://developers.google.com/crawling/docs/crawlers-fetchers/google-common-crawlers
+# Common crawlers (reverse DNS: *.googlebot.com)
+MCR.WAF.KnownBotUserAgents=\
+Googlebot,\
+GoogleOther,\
+Storebot-Google,\
+Google-InspectionTool,\
+Google-CloudVertexBot,\
+Google-Extended
+
+# https://developers.google.com/crawling/docs/crawlers-fetchers/google-special-case-crawlers
+# Special-case crawlers (reverse DNS: rate-limited-proxy-*.google.com)
+MCR.WAF.KnownBotUserAgents=%MCR.WAF.KnownBotUserAgents%,\
+AdsBot-Google,\
+AdsBot-Google-Mobile,\
+Mediapartners-Google,\
+APIs-Google,\
+Google-Safety
+
+# https://developers.google.com/crawling/docs/crawlers-fetchers/google-user-triggered-fetchers
+# User-triggered fetchers (reverse DNS: *.gae.googleusercontent.com, google-proxy-*.google.com)
+MCR.WAF.KnownBotUserAgents=%MCR.WAF.KnownBotUserAgents%,\
+FeedFetcher-Google,\
+GoogleMessages,\
+Google-NotebookLM,\
+Google-Pinpoint,\
+GoogleProducer,\
+Google-Read-Aloud,\
+Google-Site-Verification,\
+Google-CWS
+
+# https://blogs.bing.com/webmaster/August-2012/How-to-Verify-that-Bingbot-is-Bingbot
+# https://www.bing.com/webmasters/help/how-to-verify-bingbot-3905dc26
+MCR.WAF.KnownBotUserAgents=%MCR.WAF.KnownBotUserAgents%,\
+bingbot,\
+msnbot
+
+# https://www.baidu.com/search/spider_japan.html
+MCR.WAF.KnownBotUserAgents=%MCR.WAF.KnownBotUserAgents%,\
+Baiduspider
+
+# https://support.apple.com/de-de/119829
+MCR.WAF.KnownBotUserAgents=%MCR.WAF.KnownBotUserAgents%,\
+Applebot
+
+# Known bot reverse DNS patterns (comma-separated patterns with wildcards).
+# These hostname patterns are verified via reverse + forward DNS lookup,
+# but only if the User-Agent was already identified as a known bot above.
 
 # https://developers.google.com/crawling/docs/crawlers-fetchers/verify-google-requests?hl=de
-MCR.WAF.AllowedReverseDNS=\
+MCR.WAF.KnownBotReverseDNS=\
 crawl-*.googlebot.com,\
 *-crawl-*.googlebot.com,\
 *.geo.googlebot.com,\
@@ -44,20 +103,20 @@ rate-limited-proxy-*.google.com,\
 google-proxy-*.google.com
 
 # https://blogs.bing.com/webmaster/August-2012/How-to-Verify-that-Bingbot-is-Bingbot
-MCR.WAF.AllowedReverseDNS=%MCR.WAF.AllowedReverseDNS%,\
+MCR.WAF.KnownBotReverseDNS=%MCR.WAF.KnownBotReverseDNS%,\
 msnbot-*-*-*-*.search.msn.com
 
 # https://www.baidu.com/search/spider_japan.html
-MCR.WAF.AllowedReverseDNS=%MCR.WAF.AllowedReverseDNS%,\
+MCR.WAF.KnownBotReverseDNS=%MCR.WAF.KnownBotReverseDNS%,\
 baiduspider-*-*-*-*.crawl.baidu.com,\
 BaiduMobaider-*-*-*-*.crawl.baidu.jp
 
 # https://support.apple.com/de-de/119829
-MCR.WAF.AllowedReverseDNS=%MCR.WAF.AllowedReverseDNS%,\
+MCR.WAF.KnownBotReverseDNS=%MCR.WAF.KnownBotReverseDNS%,\
 *-*-*-*.applebot.apple.com
 
 # https://www.bing.com/webmasters/help/how-to-verify-bingbot-3905dc26
-MCR.WAF.AllowedReverseDNS=%MCR.WAF.AllowedReverseDNS%,\
+MCR.WAF.KnownBotReverseDNS=%MCR.WAF.KnownBotReverseDNS%,\
 *search.msn.com
 
 
